# haskell-aoc

./: README.md  haskell-aoc.cabal  package.yaml
app/: Main.hs
src/: Lib.hs  Main.hs
src/Y2015/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs
src/Y2021/: Day01.hs  Day02.hs
test/: Spec.hs  Y2015.hs  Y2021.hs
