cabal-version:      2.4
name:               haskell-aoc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             kproskuryakov
maintainer:         2399977+KProskuryakov@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    build-depends:
        base ^>=4.14.3.0,
        classy-prelude ^>=1.5.0.1,
        text ^>=1.2.5.0,
        bytestring ^>=0.11.1.0,
        vector ^>=0.12.3.1,
        cryptohash-md5 ^>=0.11.101.0
    default-extensions: NoImplicitPrelude, OverloadedStrings
    hs-source-dirs:   src
    default-language: Haskell2010
    exposed-modules: Lib, Y2015.Day01, Y2015.Day02, Y2015.Day03, Y2015.Day04, Y2015.Day05

test-suite spec
    main-is:          Spec.hs
    other-modules: Y2015
    build-depends:
        base ^>=4.14.3.0,
        haskell-aoc,
        classy-prelude ^>=1.5.0.1,
        tasty ^>=1.4.2.1,
        tasty-hunit ^>=0.10.0.3
    type: exitcode-stdio-1.0
    default-extensions: NoImplicitPrelude, OverloadedStrings
    hs-source-dirs:   test
    default-language: Haskell2010

